<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/tbCollapsing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/ivMoviePoster"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_170sdp"
                    android:contentDescription="@string/app_name"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Star Wars: Episode IV - A New Hope" />

                <TextView
                    android:id="@+id/tvGenreTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/eighty_percent_transparency_black"
                    app:layout_constraintBottom_toBottomOf="@+id/tvGenreTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvGenreTitle"
                    app:layout_constraintTop_toTopOf="@+id/tvGenreTitle"
                    tools:text="Action, Adventure, Fantasy, Sci-Fi" />

                <TextView
                    android:id="@+id/tvDirectorTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/director"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvGenreTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvGenreTitle" />

                <TextView
                    android:id="@+id/tvDirector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toBottomOf="@+id/tvDirectorTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvDirectorTitle"
                    app:layout_constraintTop_toTopOf="@+id/tvDirectorTitle"
                    tools:text="George Lucas" />

                <TextView
                    android:id="@+id/tvWriterTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/writer"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvDirectorTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvDirector" />

                <TextView
                    android:id="@+id/tvWriter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvWriterTitle"
                    app:layout_constraintTop_toTopOf="@+id/tvWriterTitle"
                    tools:text="George Lucas" />

                <TextView
                    android:id="@+id/tvActorTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/actors"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvWriterTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvWriter" />

                <TextView
                    android:id="@+id/tvActor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvActorTitle"
                    app:layout_constraintTop_toTopOf="@+id/tvActorTitle"
                    tools:text="George Lucas" />

                <TextView
                    android:id="@+id/tvPlot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/eighty_percent_transparency_black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tvActor"
                    app:layout_constraintStart_toStartOf="@+id/tvActorTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvActor"
                    tools:text="Luke Skywalker joins forces with a Jedi Knight, a cocky pilot, a Wookiee and two droids to save the galaxy from the Empire's world-destroying battle station, while also attempting to rescue Princess Leia from the mysterious Darth Vader." />
            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>